feat(branding): set ArenaX logo image as browser tab favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpeg" href="/Your%20ultimate%20guide%20to%20logo%20design.jpeg" />
+    <link rel="shortcut icon" type="image/jpeg" href="/Your%20ultimate%20guide%20to%20logo%20design.jpeg" />
+    <link rel="apple-touch-icon" href="/Your%20ultimate%20guide%20to%20logo%20design.jpeg" />
     <title>Arena X — Competitive Hub</title>
     <meta name="description" content="Arena X Competitive Hub" />
     <meta name="author" content="Arena X" />
